# grades-cube

./: .eslintrc  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc  .prettierrc.json  README.md  eslint.config.js  index.html  jest.config.ts  main.ts  package-lock.json  package.json  preload.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: node.js.yml
data/: data.json
src/: App.vue  PrimeVueConfig.ts  background.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/assets/: data.json  primeflex-extended.scss  styles.css
src/components/: CourseElement.vue  CoursesOutline.vue
src/components/courses/: Course.ts  CourseEntity.ts  CourseGateway.ts  CourseStore.ts
src/components/evaluations/: EvaluatedStudent.ts  EvaluatedStudentEntity.ts  Performance.ts  PerformanceEntity.ts
src/components/groups/: Group.ts  GroupEntity.ts  GroupGateway.ts  GroupStore.ts  GroupsToYears.ts
src/components/layout/: AutoCompleteListWithLabel.vue  AutoCompleteWithLabel.vue  CustomTransition.vue  DatePickerWithLabel.vue  EntityList.vue  InputWithLabel.vue  ManagementPanel.vue  (+2 more)
src/composables/: dataStore.ts  defaultColumns.ts
src/menu/: MainMenu.vue
src/model/: Column.ts  Course.ts  Group.ts  Pupil.ts  State.ts  Subject.ts  defaultColumns.ts
src/router/: index.ts
src/store/: Database.ts  KeyValueStore.ts
tests/: CourseTree.spec.ts  GroupOutline.spec.ts  PupilTable.spec.ts
tests/unit/: electron.spec.js  example.spec.ts
(+50 files in other folders)
