[package]
name = "grades-cube"
version = "0.0.0"
description = "A Tauri App"
authors = ["Nikolas Pertschy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [] }
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.1"

